2007-07-22  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-ellipse.c: Remove pointer indirections;
	add sanity checks on the public entry points; make all the public
	properties floating point (where needed) andconvert them to fixed
	point internally. (Partial fix for #389)

2007-07-22  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour.[ch]: Rename ClutterBehaviour::apply
	and ClutterBehaviour::remove to ClutterBehaviour::applied and
	ClutterBehaviour::removed respectively, and emit them when the
	behaviour has been applied (or does no longer apply) to an actor.

	(clutter_behaviour_dispose), (clutter_behaviour_finalize),
	(clutter_behaviour_class_init): Move the actor removal to the
	::dispose virtual function, and remove the ::finalize one;
	document the missing properties and signals.

	(clutter_behaviour_clear): Add function to clear a behaviour:
	every actor will be unreffed and the ClutterBehaviour::removed
	signal will be emitted.

2007-07-21  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-event.c:
	Correct  clutter_event_get_state () return type. Fixes #398

	* clutter/glx/clutter-stage-glx.c:
	Disable use XFixes cursor visibility funcs. Appears to have issues
	on feisty X Server at least. Fallback should work generally better.
	
	Fix non offscreen clutter_stage_snapshot to also rotate read pixel
	data to correct orientation. 
	
2007-07-12  Matthew Allum  <mallum@openedhand.com>

	* clutter/eglnative/clutter-event-egl.c: (clutter_event_dispatch):
	Avoid sending too many events which are just pressure changes.

2007-07-12  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c: (clutter_actor_paint):
	* clutter/clutter-stage.c: (clutter_stage_get_actor_at_pos):
	* clutter/cogl/cogl.h:
	* clutter/cogl/gl/cogl.c: (cogl_get_viewport):
	* clutter/cogl/gles/cogl.c: (cogl_get_viewport):
	Hopefully fix clutter_actor_at_pos on !32bpp displays. 
	Based on patch from Pan Bohui, See;